[package]
name = "nexus-vector-db"
version = "0.2.0"
edition = "2021"
authors = ["Davi Bonetto <davi.bonetto100@gmail.com>"]
description = "L4 High-Performance Vector Database with HTTP API"
repository = "https://github.com/DaviBonetto/NEXUS-L4-HighPerf-Vector-DB"

[dependencies]
# Web Framework
actix-web = "4"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"

# Utilities
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
